Closed Bug 1321505 Opened 9 years ago Closed 9 years ago

[webvr] After reloading pages, it can't enumerate the controllers

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: daoshengmu, Assigned: daoshengmu)

Details

Attachments

(1 file)

That is because we have to clean the current using controllers when the nsGlobalWindow is no longer to have gamepads.
Assignee: nobody → dmu
Comment on attachment 8816073 [details] Bug 1321505 - Clean VR controllers when nsGlobalWindow no longer uses gamepads; https://reviewboard.mozilla.org/r/96862/#review97204 This looks good for now, but we may need to make changes later as we start to use the controllers from multiple content at once, such as when chrome UX implements a 3d cursor model and controls.
Attachment #8816073 - Flags: review?(kgilbert) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/c4db9e919f6c Clean VR controllers when nsGlobalWindow no longer uses gamepads; r=kip
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: