Bug 1321505 - Clean VR controllers when nsGlobalWindow no longer uses gamepads; r=kip

MozReview-Commit-ID: IlAa5vDqwAE

--HG--
extra : rebase_source : 42e444083e2d43334147fb945643d12c4403af34