gfx/vr/gfxVROpenVR.cpp
@@ -567,7 +567,7 @@ VRControllerManagerOpenVR::Init()
 void
 VRControllerManagerOpenVR::Destroy()
 {
-  mOpenVRController.Clear();
+  RemoveDevices();
   mOpenVRInstalled = false;
 }
 
@@ -760,4 +760,11 @@ VRControllerManagerOpenVR::ScanForDevices()
   #endif
     }
   }
+}
+
+void
+VRControllerManagerOpenVR::RemoveDevices()
+{
+  mOpenVRController.Clear();
+  mControllerCount = 0;
 }
